--- a/Lecture01.tex
+++ b/Lecture01.tex
@@ -183,7 +183,7 @@ they don't have the properties you think/want then to have.\\
 Properties of a cryptographic hash function
 \begin{enumerate}
 	\item Collision resistance:\\
-		Can't find $x \neq y$ such that $H(x) = (y)$
+		Can't find $x \neq y$ such that $H(x) = H(y)$
 	\item Second preimage resistance:\\
 		Given $x$, can't find $y$ such that $H(x) = H(y)$
 	\item If $x$ is chosen randomly from a distribution \textit{with high entropy},
