Uncommented some lectures

--- a/InfoSec.tex
+++ b/InfoSec.tex
@@ -34,10 +34,11 @@
 \input{Lecture09}}{
 \input{Lecture10}}{
 \input{Lecture11}}{
-%\input{Lecture12}}{ % See lecture slides
-%\input{Lecture13}}{ % See lecture slides
+\input{Lecture12}}{ % See lecture slides
+\input{Lecture13}}{ % See lecture slides
 \input{Lecture14}}{
 \input{Lecture15}}{
+\input{Lecture20}}{
 \input{Lecture21}}{
 \input{Lecture22}}{
 \input{Lecture23}}{
